tests/samples/invalid/mismatched_assign.pn
fn main()
{
	var x = true;

	x = 100;

	return:
	x
}
